# am2

./: Cargo.toml  package-lock.json
crates/app/: Cargo.toml  package-lock.json  package.json  tailwind.config.js
crates/app/src/: app_state.rs  lib.rs  sse.rs
crates/app/src/components/: divider.rs  dropdown.rs  hamburger.rs  html.rs  mod.rs  more.rs  navbar.rs  player_list.rs  stats.rs  theme.rs
crates/app/src/pages/: login.rs  mod.rs  register.rs  thing.rs
crates/app/src/pages/authenticated/: dashboard.rs  mod.rs
crates/app/style/: input.css  output.scss
crates/arma/: Cargo.toml
crates/arma/src/: lib.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/data/: Cargo.toml
crates/data/src/: lib.rs  user.rs
crates/data/src/repository/: mod.rs  user_repository.rs
crates/error/: Cargo.toml
crates/frontend/: Cargo.toml
crates/frontend/src/: lib.rs
crates/web/: Cargo.toml
crates/web/src/: inner_leptos.rs  leptos.rs  lib.rs  response.rs
crates/web/src/api/: handler.rs  mod.rs
crates/web/src/api/handler/: auth.rs
crates/web/src/extensions/: jwt_auth.rs
crates/web/src/inner_leptos/: fileserv.rs
crates/web/src/middleware/: mod.rs  user.rs
crates/web/src/sse/: handler.rs  service.rs
migrations/: 20230819224730_init.down.sql  20230819224730_init.up.sql  20230819224942_users.down.sql  20230819224942_users.up.sql
src/: main.rs
