[package]
name = "app"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anymap = "1.0.0-beta.2"
axum = { workspace = true, optional = true }

cfg-if = "1"

convert_case.workspace = true

data = { workspace = true }
derive_more = "0.99.17"

futures = "0.3.28"

gloo-net = "0.4.0"
gloo-storage = "0.3.0"

indicatif = "0.17.6"

leptos = { workspace = true, features = ["tracing"] }
leptos_axum = { workspace = true, optional = true }
leptos_meta.workspace = true
leptos_router.workspace = true
leptos-use.workspace = true

reqwest = { workspace = true, optional = true }

serde.workspace = true
serde_json.workspace = true
serde_type_name.workspace = true

tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }

tracing.workspace = true

uuid.workspace = true

[features]
default = []
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate", "data/hydrate"]
ssr = ["leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr", "data/ssr", "dep:axum", "dep:leptos_axum", "dep:reqwest", "dep:tower", "dep:tower-http"]
