[package]
name = "arma"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
data.workspace = true
web.workspace = true  # not a fan of this dependency here...

tokio.workspace = true

a2s = { version = "0.5.2", features = ["async", "serialization"] }
local-ip-address = "0.5.4"
