[package]
name = "frontend"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app = { workspace = true, features = ["hydrate"] }
leptos = { workspace = true, features = ["hydrate"] }

tracing-subscriber.workspace = true

tracing-subscriber-wasm = { version = "0.1.0" }
console_error_panic_hook = { version = "0.1" }
wasm-bindgen = { version = "0.2" }
