[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app = { workspace = true, features = ["ssr"] }
data = { workspace = true, features = ["ssr"] }
error.workspace = true

axum.workspace = true
convert_case.workspace = true

leptos.workspace = true
leptos_axum.workspace = true

serde.workspace = true
serde_json.workspace = true
serde_type_name.workspace = true

sqlx.workspace = true

tokio.workspace = true
tokio-stream.workspace = true

tower.workspace = true
tower-http.workspace = true

uuid.workspace = true

axum-extra = { version = "0.7.4", features = ["cookie", "multipart"] }
jsonwebtoken = "8.3.0"
